<resources>
    <string name="app_name">Электронный журнал</string>
    <string name="welcome"><b>Добро пожаловать!</b></string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="prompt_email">Почта</string>
    <string name="prompt_password">Пароль</string>
    <string name="title_login">Вход</string>
    <string name="title_forgot_password">Забыли пароль</string>
    <string name="text_change_password"><b>Смена пароля</b></string>
    <string name="text_confirmation_code">Код подтверждения</string>
    <string name="text_new_password">Новый пароль</string>
    <string name="text_confirm_new_password">Подтвердите новый пароль</string>
    <string name="action_sign_in">ВОЙТИ</string>
    <string name="action_send">Отправить</string>
    <string name="action_change_password">Сменить пароль</string>
    <string name="enter_your_email_to_login">Введите свою почту и пароль, чтобы войти</string>
    <string name="enter_your_email_to_receive_a_confirmation_code">Введите свою почту, на которую придет\nкод подтверждения</string>
    <string name="fill_in_all_fields_to_change_the_password">Заполниет все поля, чтобы поменять пароль</string>
    <string name="error_failed_to_load_data">Ошибка!\nНевозможно загрузить данные!</string>
    <string name="navigation_profile">Профиль</string>
    <string name="navigation_schedule">Расписание</string>
    <string name="navigation_news">Новости</string>
    <string name="text_pn">ПН</string>
    <string name="text_vt">ВТ</string>
    <string name="text_sr">СР</string>
    <string name="text_cht">ЧТ</string>
    <string name="text_pt">ПТ</string>
    <string name="text_sb">СБ</string>
    <string name="text_vs">ВС</string>
    <string name="text_logout">Выйти</string>
    <string name="text_options">Настройки</string>
    <string name="text_task_control">Управление заданиями</string>
    <string name="text_mark_attendance">Отметить посещаемость</string>
    <string name="text_students">Студенты</string>
    <string name="text_save">Сохранить</string>
</resources>