<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.entrance.changing_password.ChangingPasswordFragment">

    <ImageButton
        android:id="@+id/im_bt_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:background="@color/none"
        android:padding="10dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/accent" />

    <TextView
        android:id="@+id/text_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        android:text="@string/text_change_password"
        android:textColor="@color/dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/text_command"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/text_command"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal|top"
        android:text="@string/fill_in_all_fields_to_change_the_password"
        android:textColor="@color/middle_gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/et_confirmation_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_change_password" />

    <EditText
        android:id="@+id/et_confirmation_code"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:drawableStart="@drawable/ic_confirm_email"
        android:drawablePadding="15dp"
        android:hint="@string/text_confirmation_code"
        android:inputType="number"
        android:maxLength="6"
        android:paddingStart="30dp"
        app:layout_constraintBottom_toTopOf="@+id/et_new_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_command" />

    <EditText
        android:id="@+id/et_new_password"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="15dp"
        android:hint="@string/text_new_password"
        android:inputType="textPassword"
        android:paddingStart="30dp"
        app:layout_constraintBottom_toTopOf="@+id/et_confirmation_new_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_confirmation_code" />

    <EditText
        android:id="@+id/et_confirmation_new_password"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="15dp"
        android:hint="@string/text_confirm_new_password"
        android:inputType="textPassword"
        android:paddingStart="30dp"
        app:layout_constraintBottom_toTopOf="@id/bt_change_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_new_password" />

    <Button
        android:id="@+id/bt_change_password"
        style="@style/ButtonStyle"
        android:layout_width="185dp"
        android:layout_height="40dp"
        android:layout_gravity="start"
        android:layout_marginTop="40dp"
        android:text="@string/action_change_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_confirmation_new_password" />

    <include layout="@layout/part_loading" />

</androidx.constraintlayout.widget.ConstraintLayout>