<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".presentation.tabs.view_pager.ScheduleViewPagerItem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_pn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_pn"
            android:textColor="@color/accent_light"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_vt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_vt"
            android:textColor="@color/accent_light"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_sr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_sr"
            android:textColor="@color/accent_light"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_cht"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_cht"
            android:textColor="@color/accent_light"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_pt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_pt"
            android:textColor="@color/accent_light"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_sb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_sb"
            android:textColor="@color/accent_light"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_vs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_vs"
            android:textColor="@color/accent_light"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_pager_item"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/text_monday"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/text_tuesday"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_tuesday"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/text_monday"
            app:layout_constraintEnd_toStartOf="@id/text_wednesday"
            app:layout_constraintStart_toEndOf="@id/text_monday"
            app:layout_constraintTop_toTopOf="@id/text_monday" />

        <TextView
            android:id="@+id/text_wednesday"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/text_tuesday"
            app:layout_constraintEnd_toStartOf="@id/text_thursday"
            app:layout_constraintStart_toEndOf="@id/text_tuesday"
            app:layout_constraintTop_toTopOf="@id/text_tuesday" />

        <TextView
            android:id="@+id/text_thursday"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/text_wednesday"
            app:layout_constraintEnd_toStartOf="@id/text_friday"
            app:layout_constraintStart_toEndOf="@id/text_wednesday"
            app:layout_constraintTop_toTopOf="@id/text_wednesday" />

        <TextView
            android:id="@+id/text_friday"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/text_thursday"
            app:layout_constraintEnd_toStartOf="@id/text_saturday"
            app:layout_constraintStart_toEndOf="@id/text_thursday"
            app:layout_constraintTop_toTopOf="@id/text_thursday" />

        <TextView
            android:id="@+id/text_saturday"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/text_friday"
            app:layout_constraintEnd_toStartOf="@id/text_sunday"
            app:layout_constraintStart_toEndOf="@id/text_friday"
            app:layout_constraintTop_toTopOf="@id/text_friday" />

        <TextView
            android:id="@+id/text_sunday"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/text_saturday"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_saturday"
            app:layout_constraintTop_toTopOf="@id/text_saturday" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>